@@ -1,5 +1,13 @@
 Changes with APR b1
 
+  *) On FreeBSD, it is possible for the first call to sendfile to
+     get EAGAIN, but still send some data.  This means that we cannot
+     call sendfile and then check for EAGAIN, and then wait and call
+     sendfile again.  If we do that, then we are likely to send the
+     first chunk of data twice, once in the first call and once in the
+     second.  If we are using a timed write, then we check to make sure
+     we can send data before trying to send it. [Ryan Bloom]
+
   *) Cleanup to help Apache support programs build cleanly.
      [Cliff Woolley <cliffwoolley@yahoo.com>]
 
